--- a/hw/hw01/part_1/cse_6363_ml_hw01.tex
+++ b/hw/hw01/part_1/cse_6363_ml_hw01.tex
@@ -220,7 +220,9 @@ For a detailed output, please refer to \textbf{\path{naiveBayes.out}}
 
 d. Compare the two classifiers and discuss their comparative performance.
 \newline
-They preformed similarly, considering small size of the problem, there were not
+The performance varies bases on training configuration, I could say 5 nearest
+neighbors performed similar to Naive Bayes but for lower K's the performance
+decreased. Also Considering small size of the problem, there were not
 much room for variational solutions. KNN sorts training dataset based on a similarity score
 for a given test datum and takes a vote among the nearest neighbors to make a prediction.
 Naive Bayes, computes conditional probabilities based on statistical priori and
